--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   },
   "devDependencies": {
     "@nuxt/content": "npm:@nuxt/content-edge@latest",
-    "nuxt": "^3.0.0-rc.4"
+    "nuxt": "npm:nuxt3@latest"
   }
 }
